cd/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: fibonacci-server
  name: fibonacci-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fibonacci-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 50%
  template:
    metadata:
      labels:
        app: fibonacci-server
    spec:
      containers:
      - env:
        - name: PORT
          value: '8080'
        image: asia.gcr.io/decoded-petal-232806/fibonacci-server:72135557-bb4c-4148-97c8-ad78838b314c
        imagePullPolicy: Always
        name: fibonacci-server
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          periodSeconds: 5
