cd/service.yaml
apiVersion: extensions/v1beta1
kind: Service
metadata:
  labels:
    app: fibonacci-server
  name: fibonacci-server
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fibonacci-server
